packages/workbench/src/app/components/yasgui-component-facade/yasgui-component-facade.component.scss
/* ... */
app-yasgui-component-facade .yasr table.pvtTable tbody tr td,
app-yasgui-component-facade .yasr .pivot-table-plugin .pvtUi .pvtTable .pvtRowLabel {
  color: var(--gw-datatable-row-color);
  background-color: var(--gw-datatable-row-background);
}

app-yasgui-component-facade .yasr .pivot-table-plugin .pvtFilterBox {
  color: var(--gw-dialog-color);
  background-color: var(--gw-dialog-background);
  border-color: var(--gw-dialog-border-color);
}

app-yasgui-component-facade .yasr .pivot-table-plugin .pvtFilterBox button {
  color: var(--gw-button-secondary-color);
  background-color: var(--gw-dialog-background);
  border-color: var(--gw-button-secondary-border-color);
}

app-yasgui-component-facade .yasr .pivot-table-plugin .pvtFilterBox button:hover {
  background-color: var(--gw-button-secondary-hover-background);
  cursor: pointer;
}

app-yasgui-component-facade .yasr .pivot-table-plugin .pvtFilterBox .pvtSearch {
  color: var(--gw-form-field-color);
  background-color: var(--gw-form-field-background);
  border-color: var(--gw-form-field-border-color);
}

.keyboard-shortcuts-dialog-wrapper {
  height: 20px;
  line-height: 18px;
  font-size: 90%;
}

.keyboard-shortcuts-dialog-wrapper.resizeable-on {
  margin-top: -31px;
}

.keyboard-shortcuts-dialog-button {
  font-weight: 400;
  color: var(--gw-button-secondary-color) !important;
  background-color: var(--gw-button-secondary-background) !important;
  border-color: var(--gw-button-secondary-border-color) !important;
}

app-yasgui-component-facade .yasr .explain-plan-copy-btn {
  font-weight: 400;
  color: var(--gw-button-secondary-color);
  background-color: var(--gw-shortcuts-secondary-button-background);
  border-color: var(--gw-button-secondary-border-color);
  margin-right: 1px;
  margin-top: 1px;
}

app-yasgui-component-facade .hidden {
  display: none;
}

/* =================================================================================
    Media queries ensuring proper responsive layout on different screen resolutions
   ================================================================================= */
/* And scale it down on given viewport width */
@media (max-width: 1439px) {
  /* Omit the heading  tags */
  app-yasgui-component-facade :not(h3,h4,.dialog-body,.custom-button,.btn-orientation,sup) {
    font-size: 14px !important;
  }

  app-yasgui-component-facade .yasgui-toolbar .yasgui-btn {
    font-size: 12px !important;
    height: 24px !important;
  }

  app-yasgui-component-facade .yasgui-toolbar .btn-orientation {
    font-size: 24px !important;
  }

  app-yasgui-component-facade .yasqe_queryButton,
  app-yasgui-component-facade .ontotext-dropdown-button,
  app-yasgui-component-facade .tabPanel .yasqe  .yasqe-footer-buttons .abort-button {
    height: 33px !important;
  }
}

@media (max-width: 1200px) {
  app-yasgui-component-facade .yasr .yasr_btnGroup .yasr_btn {
    padding: .73em;
  }

  .yasr_btn span {
    display: none;
  }
}

@media (max-width: 768px) {
  .ontotext-dropdown .button-name {
    display: inline;
  }

  .ontotext-dropdown .ontotext-dropdown-button:after {
    padding-left: 10px !important;
  }
}

.ontotext-yasgui-tooltip .tooltip-box {
  background-color: var(--gw-tooltip-background);
  color: var(--gw-tooltip-color);
}

.ontotext-yasgui-tooltip .tooltip-arrow {
  color: var(--gw-tooltip-background);
}

.ontotext-yasgui-tooltip[data-placement^=top] .tooltip-arrow::before {
  border-top-color: var(--gw-tooltip-background);
}

.ontotext-yasgui-tooltip[data-placement^=left] .tooltip-arrow::before {
  border-left-color: var(--gw-tooltip-background);
}

.ontotext-yasgui-tooltip[data-placement^=right] .tooltip-arrow::before {
  border-right-color: var(--gw-tooltip-background);
}

.ontotext-yasgui-tooltip[data-placement^=bottom] .tooltip-arrow::before {
  border-bottom-color: var(--gw-tooltip-background);
}

